# wyovm

./: Cargo.toml  README.md
.github/workflows/: tests.yml
asm/: hello_world.S
src/: lib.rs  main.rs  ui.rs  util.rs  vm.rs
tests/: machine_tests.rs
