[package]
name = "wyovm"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.23", features = ["derive"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
thiserror = "2.0.9"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace"] }
